# server/utils/users/user.util.js
@@ -164,6 +164,54 @@ class userValidation {
     }
     return next();
   }
+
+  static async validateProfile(req, res, next) {
+    const { id } = req.user;
+    const {
+      firstname, lastname, username, bio
+    } = req.body;
+    const errors = {};
+
+    if (firstname) {
+      firstname.trim();
+      if (!validator.isLength(firstname, { min: 2, max: 50 })) {
+        errors.firstname = 'Your first name should be between 2 and 50 characters long';
+      }
+      if (!validator.isAlpha(firstname)) {
+        errors.firstname = 'Your first name should contain only alphabets.';
+      }
+    }
+    if (lastname) {
+      lastname.trim();
+      if (!validator.isLength(lastname, { min: 2, max: 50 })) {
+        errors.lastname = 'Your last name should be between 2 and 50 characters long';
+      }
+      if (!validator.isAlpha(lastname)) {
+        errors.lastname = 'Your last name should contain only alphabets.';
+      }
+    }
+    if (bio) {
+      const validBio = bio.replace(/([@#$%&=<>*/\\])/g, '').trim();
+      if (!validator.isLength(bio, { min: 0, max: 1000 })) {
+        errors.bio = 'Your bio should not be more than 1000 characters long';
+      }
+      req.body.bio = validBio;
+    }
+
+    if (Object.keys(errors).length > 0) return Response(res, 400, errors);
+
+    try {
+      if (username) {
+        const findUserName = await User.findOne({ where: { username } });
+        if (findUserName && findUserName.dataValues.id !== id) {
+          return Response(res, 400, 'This username is already taken.');
+        }
+      }
+    } catch (error) {
+      return Response(res, 500, error.mesage);
+    }
+    return next();
+  }
 }
 
 export default userValidation;
